# nergal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  test.md  test2.md  vite.config.ts
.claude/plans/: fizzy-wobbling-fog.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  conventions.md  design.md  hooks.md  patterns.md
docs/agents/: architecture.md  opencode-sse-schema.md
docs/follow-ups/: release-automation.md
openspec/: config.yaml  config_guide.yaml
openspec/_superseded/ship-flow-v2/: SUPERSEDED.md  design.md  proposal.md  tasks.md
openspec/changes/agent-adapter-foundation/: .review-history.md  design.md  implementation.md
openspec/changes/agent-spawned-worktrees/: design.md  implementation.md  proposal.md  tasks.md
openspec/changes/clickup-sync/: implementation.md  proposal.md  tasks.md
openspec/changes/clickup-task-integration/: design.md  implementation.md  proposal.md  tasks.md
openspec/changes/clickup-writeback/: design.md  implementation.md  proposal.md  tasks.md
openspec/changes/cluihud-mcp-server/: design.md  implementation.md  proposal.md  tasks.md
openspec/changes/codex-adapter/: design.md  proposal.md  tasks.md
openspec/changes/context-bridge/: implementation.md  proposal.md  tasks.md
openspec/changes/cross-session-messaging/: design.md  implementation.md  proposal.md  tasks.md
openspec/changes/diff-annotation-mode/: design.md  proposal.md  (+1 more)
scripts/: extract-release-body.mjs  extract-release-body.test.mjs  generate-latest-json.mjs  merge-latest-json.mjs  merge-latest-json.test.mjs  release-banner.tpl.md  release.mjs  release.test.mjs  update-previous-banner.mjs  update-previous-banner.test.mjs
src/: App.tsx  app.rs  config.rs  ghostty_config.rs  main.rs  main.tsx  session.rs  setup.rs  workspace.rs
src-tauri/: Cargo.toml  main.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  nergal-preview.html
src-tauri/migrations/: 001_initial.sql  002_merge_target.sql  003_annotations.sql  004_annotation_highlight_source.sql  005_spec_annotations.sql  006_scratchpad.sql  007_agent_id.sql  008_obsidian_config.sql  009_obsidian_search_subdir.sql  010_pinned_notes.sql  011_launch_options.sql  012_workspace_openspec_dir.sql  013_env_shells.sql  014_env_shell_suggestions.sql  015_clickup_mirror.sql  016_clickup_stale_since.sql  017_clickup_user_id.sql  018_clickup_session_binding.sql  019_clickup_closed_out.sql  020_clickup_status_type.sql  021_session_summaries.sql  022_session_transcripts.sql  023_linear_mirror.sql  024_linear_session_binding.sql  025_linear_workspaces.sql  026_linear_closed_out.sql  027_linear_estimation_type.sql  028_cross_session.sql  029_workspace_sort_order.sql  030_workspace_plans_dir.sql
src-tauri/src/: atomic_write.rs  browser.rs  commands.rs  config.rs  db.rs  feeds.rs  lib.rs  main.rs  migrate_legacy.rs  models.rs  notify.rs  openspec.rs  plan_state.rs  platform_proc.rs  platform_spawn.rs  pty.rs  setup.rs  updater.rs  worktree.rs
src-tauri/src/agents/: cost_aggregator.rs  mod.rs  registry.rs  state.rs
src-tauri/src/agents/claude_code/: adapter.rs  cost.rs  mod.rs  plan.rs  plans_path.rs  tasks_parser.rs
src-tauri/src/agents/codex/: adapter.rs  mod.rs  rollout_resolver.rs  rollout_tail.rs  setup.rs  transcript.rs
src-tauri/src/agents/opencode/: adapter.rs  mod.rs  permission_client.rs  server_supervisor.rs  sse_client.rs
src-tauri/src/agents/pi/: adapter.rs  jsonl_tail.rs  mod.rs  session_resolver.rs  transcript.rs
src-tauri/src/claude/: cost.rs  mod.rs  openspec.rs  plan.rs  transcript.rs
src-tauri/src/clickup/: auth.rs  client.rs  closure.rs  integration.rs  mirror.rs  mod.rs  model.rs  poller.rs  send_gate.rs  writeback.rs
src-tauri/src/clickup/fixtures/: comments.json  folderless_lists.json  folders.json  spaces.json  tasks_page.json  teams.json  user.json
src-tauri/src/hooks/: cli.rs  events.rs  server.rs  state.rs
src-tauri/src/linear/: auth.rs  client.rs  closure.rs  integration.rs  mirror.rs  mod.rs  model.rs  poller.rs  writeback.rs
src-tauri/src/mcp/: delivery.rs  directory.rs  messaging.rs  mod.rs  registration.rs  router.rs  shim.rs  transport.rs  worktree_sessions.rs
src-tauri/src/mcp/summary/: agent_cli.rs  api_key.rs  mod.rs  runner.rs  secret.rs
src-tauri/src/obsidian/: bootstrap.rs  channels.rs  config.rs  moc.rs  mod.rs  paths.rs  pinned_notes.rs  pinned_notes_watcher.rs  post_session.rs  templates.rs  templates_watcher.rs
src-tauri/src/platform/: mod.rs  win_sec.rs
src-tauri/src/scratchpad/: commands.rs  mod.rs  purge.rs  watcher.rs
src-tauri/src/search/: mod.rs  tests.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/terminal/: config.rs  differ.rs  emitter.rs  input.rs  mod.rs  session.rs  types.rs
src-tauri/tests/: agent_foundation_cost.rs  agent_foundation_migration.rs
src/claude/: cost.rs  mod.rs  plan.rs  transcript.rs
src/hooks/: cli.rs  events.rs  mod.rs  server.rs  state.rs  useCodeMirrorMentionPicker.tsx  useFocusPulse.ts  useKeyboardShortcuts.ts  useObsidianMentionPicker.tsx
src/lib/: codemirrorHighlight.ts  confirm.ts  deepLinkRouter.ts  highlighter.ts  keymap.ts  mentionPicker.ts  notifications.ts  obsidian.ts  panelFocus.ts  swal.ts  tauri.ts  themes.ts  types.ts
src/stores/: activity.ts  agent.ts  annotations.ts  askUser.ts  browser.ts  buddy.ts  clickup.ts  config.ts  conflict.ts  crossSession.ts  files.ts  git.ts  hooks.ts  layout.ts  linear.ts  notifications.ts  obsidian.ts  obsidianTemplates.ts  opencode.ts  pendingDeletes.ts  pinnedNotes.ts  plan.ts  quake.ts  quickCapture.ts  rightPanel.ts  scratchpad.ts  search.ts  session.ts  sessionTabs.ts  ship.ts  shortcuts.ts  statusFeed.ts  tasks.ts  toast.ts  workspace.ts  worktreeGate.ts  zenMode.ts
src/styles/: globals.css
src/tasks/: mod.rs  transcript_parser.rs
src/ui/: activity_log.rs  mod.rs  nav_sidebar.rs  plan_panel.rs  settings_panel.rs  size_observer.rs  status_bar.rs  task_panel.rs  terminal_panel.rs
(+628 files in other folders)
