[package]
name = "cluihud"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
gpui_ghostty_terminal = { path = "vendor/gpui-ghostty/crates/gpui_ghostty_terminal" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "net", "io-util", "signal", "time"] }
portable-pty = "0.9"
pulldown-cmark = "0.13"
similar = "2"
notify = "8"
notify-debouncer-full = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch."https://github.com/zed-industries/zed"]
gpui = { version = "0.2", registry = "crates-io" }

[patch.crates-io]
zed-xim = { path = "vendor/zed-xim" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
