[package]
name = "nergal"
version = "0.4.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "net", "io-util", "io-std", "signal", "time", "process"] }
portable-pty = "0.9"
notify = "8"
notify-debouncer-full = "0.7"
similar = "2"
pulldown-cmark = "0.13"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tauri-plugin-dialog = "2.7"
rusqlite = { version = "0.34", features = ["bundled"] }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Direct dep on arboard so we can write to the OS clipboard inside
# `spawn_blocking`. The clipboard plugin's own `write_text` runs on the
# tokio runtime and its Wayland backend makes synchronous I/O to wl-clipboard
# which stalls nearby async tasks — see `terminal_clipboard_write` in pty.rs.
arboard = "3"

# Scratchpad: UUID-keyed file identity, content hashing for own-write
# tracking, regex filter for watcher.
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
regex = "1"

# live-preview-browser change: URL parsing + scheme validation for the
# `browser_navigate` command (iframe-first architecture).
url = "2"

# linear-mirror: encode authenticated uploads.linear.app images as data URLs
# (the webview can't send the Linear auth header itself, so the backend proxies
# the fetch and hands back a base64 data: URL).
base64 = "0.22"

# global-search-engine (obsidian-bridge M2): pure-Rust file walker used as the
# fallback search path when ripgrep is absent from PATH. ripgrep is the fast
# path (shell-out), walkdir keeps the engine self-contained without it.
walkdir = "2"

# Agent-agnostic foundation: bitflags for capability sets, async-trait for
# dyn AgentAdapter, dashmap for per-session agent_id cache (sync hot path),
# parking_lot for lock-free aggregator state, dunce for cross-platform path
# canonicalization, thiserror for AdapterError, which for binary lookup.
bitflags = "2"
async-trait = "0.1"
dashmap = "6"
parking_lot = "0.12"
dunce = "1"
thiserror = "1"
which = "6"

# OpenCode adapter: HTTP client for permission REST POSTs + SSE event stream
# from `opencode serve`. eventsource-stream parses framed SSE; reqwest
# provides the underlying HTTP/streaming client; futures-util gives us
# StreamExt::next on the response body.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"
futures-util = "0.3"

# Terminal VT emulation (Phase 1 of replace-xterm-with-wezterm).
# wezterm-term / termwiz are not published on crates.io — they only live inside
# the wezterm workspace. Pinned to the last stable tag (Feb 2024); the core VT
# logic has been stable since. Update deliberately if upstream ships fixes.
wezterm-term = { git = "https://github.com/wezterm/wezterm.git", tag = "20240203-110809-5046fc22" }
termwiz = { git = "https://github.com/wezterm/wezterm.git", tag = "20240203-110809-5046fc22" }

# toml_edit preserves formatting (used by codex theme sync). plain `toml`
# is used by obsidian-bridge for the optional global override file — kept
# explicit instead of leaning on the transitive dep.
toml_edit = "0.22"
toml = "0.8"

# obsidian-bridge: tauri-plugin-deep-link registers `nergal://`;
# tauri-plugin-single-instance forwards URI launches to the running app
# on Linux (without it every xdg-open spawns a new process).
# fs2 guards the post-session bg runner against concurrent invocations.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
fs2 = "0.4"

# platform_proc: cross-platform process/port introspection replacing hand-rolled
# /proc reads. sysinfo provides process tree, cwd, environ, and system info
# (kernel version, OS name). listeners enumerates LISTEN sockets with owning
# pid — pure-Rust on Linux/macOS (hand-written libproc FFI on macOS, no
# bindgen), no build script for those targets.
sysinfo = "0.33"
listeners = "0.6"

# libc is scoped to `cfg(unix)` (not `linux`) because every ungated `libc::*`
# call site is valid POSIX — `dup2` in `redirect_journald_stdio_to_logfile`
# (lib.rs, systemd journald-pipe backpressure workaround), `getuid`, `statvfs`,
# `kill`, `setsid`, `localtime_r` — so they compile on macOS too with no
# per-site `#[cfg]`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Pinned to wry's version so we share one webkit2gtk build. Used only to connect
# the main webview's `web-process-terminated` signal for crash recovery (BUG-01).
webkit2gtk = "=2.0.2"
# Updater "reveal in file manager": FileManager1.ShowItems over D-Bus
# (file highlight + activation token so GNOME raises the window — xdg-open
# spawns carry no token and lose to focus-stealing prevention). zbus is
# Linux-only D-Bus; gated here so macOS compiles. platform-desktop later
# replaces this reveal path with the cross-platform opener plugin.
zbus = { version = "5", default-features = false, features = ["tokio"] }

# clickup-sync / linear-sync: Personal API token storage in the OS keyring.
# Per-target backend — no plaintext fallback, secret storage stays on a real
# OS keystore on both platforms:
#   Linux: Secret Service via async-secret-service + crypto-rust (pure-Rust
#   D-Bus, avoids the libdbus C binding; pulls a duplicate zbus 4.x next to the
#   tree's zbus 5 since keyring 3 pins secret-service ^4 — dedupe path is
#   keyring v4: keyring-core + zbus-secret-service-keyring-store).
#   macOS: apple-native (Keychain).
[target.'cfg(target_os = "linux")'.dependencies.keyring]
version = "3"
features = ["async-secret-service", "tokio", "crypto-rust"]

[target.'cfg(target_os = "macos")'.dependencies.keyring]
version = "3"
features = ["apple-native"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
